2011-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: parse old SUCCESS lines properly
	* perl/Amanda/DB/Catalog.pm: same
	* installcheck/Amanda_DB_Catalog.pl: test old SUCCESS lines

2011-01-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: fix reporting partial dump if only the
	  taper is partial.

2011-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/amndma_tape_simulator.c: Use full_read.
	* ndmp-src/ndma_tape.c: Use ndmchan_n_avail_record to guarantee space
	  for a record.
	* ndmp-src/ndml_chan.c (ndmchan_n_avail_record): New function.
	* ndmp-src/ndmlib.h  (ndmchan_n_avail_record): New prototype.

2011-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-dest-taper-splitter.c: Do not close disk buffer.

2010-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.pl: don't produce negative durations
	* perl/Amanda/DB/Catalog.pm: but handle them when they occur.

2010-12-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.pl: Use 'blocksize' to compute the available space.

2010-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Don't fail on trailing NUL bytes.

2010-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: Fix possible hang if
	  Amanda::MainLoop::quit is called before Amanda::MainLoop::run.
	* perl/Amanda/Changer.pm: Return the error.

2010-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Check if taper is flushing something before
	  moving a dle to directq.

2010-12-07 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec.src: remove manual library requires and
	   set curl vs libcurl based on distro.

2010-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: make relative url in index.html.

2010-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/make_html.pl: Add amanda version in html headers and footers.
